# lazywm

./: Cargo.toml  README.md
docs/: DEVLOG.md
examples/: config.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  wm.rs  wm_model.rs  x.rs
src/wm_state/: common.rs  container.rs  mod.rs  workspace.rs
